--- a/section04/gallery/index.html
+++ b/section04/gallery/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <!-- <audio autoplay="autoplay" loop="loop" preload="auto"src="audio/bgm.flac">    
-    </audio>  -->
+    <audio autoplay="autoplay" loop="loop" preload="auto"src="audio/bgm.flac">    
+    </audio> 
     
     <header class="container">
         <div></div>
