--- a/section04/gallery/index.html
+++ b/section04/gallery/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="background-move"></div>
+    <div class="background-move"></div>
+    <!-- <div class="fan"></div> -->
     <!-- <audio autoplay="autoplay" loop="loop" preload="auto"src="audio/bgm.flac">    
     </audio>  -->
     
