--- a/section04/gallery/loading/waiting_circle/waiting.html
+++ b/section04/gallery/loading/waiting_circle/waiting.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <img src="img/waiting/timg.gif" alt="wating">
+        <img src="../../img/waiting/timg.gif" alt="waiting">
         
         <p>Loading....</p>
         <div class="loading center">
@@ -22,6 +22,7 @@
             <span></span>
             <span></span>
           </div>
+          <a href="../index.html">back</a>
     </div>
     
 
