--- a/section04/gallery/loading/loading_bar/loading.html
+++ b/section04/gallery/loading/loading_bar/loading.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Loading square for squar.red network -->
     <!-- <span class="loader"><span class="loader-inner"></span></span> -->
-    
+    <a href="../index.html">back</a>
         <div class="loader">
             <div class="loader-inner">
     
