--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -19,7 +19,7 @@
         <div class="gallery">
             <div class="gallery__item">
 
-                <a href="pages/media_queries/"><img src="https://picsum.photos/200/200" alt="media queries thumbnail" class="gallery__img"></a>
+                <a href="pages/media_queries/"><img src="pages/images/cats/DSC06365.jpg" alt="media queries thumbnail" class="gallery__img"></a>
 
                 <p class="caption">Media Queries</p>
 
@@ -27,7 +27,39 @@
 
             <div class="gallery__item">
 
-                <a href="pages/background_images/"><img src="https://picsum.photos/200/200" alt="media queries thumbnail" class="gallery__img"></a>
+                <a href="pages/background_images/"><img src="pages/images/city/DSC02380.jpg" alt="media queries thumbnail" class="gallery__img"></a>
+
+                <p class="caption">Background Images</p>
+
+            </div>
+
+            <div class="gallery__item">
+
+                <a href="pages/background_images/"><img src="pages/images/food/DSC02192.jpg" alt="media queries thumbnail" class="gallery__img"></a>
+
+                <p class="caption">Background Images</p>
+
+            </div>
+
+            <div class="gallery__item">
+
+                <a href="pages/background_images/"><img src="pages/images/light/DSC04559.jpg" alt="media queries thumbnail" class="gallery__img"></a>
+
+                <p class="caption">Background Images</p>
+
+            </div>
+
+            <div class="gallery__item">
+
+                <a href="pages/background_images/"><img src="pages/images/street/DSC03075.jpg" alt="media queries thumbnail" class="gallery__img"></a>
+
+                <p class="caption">Background Images</p>
+
+            </div>
+
+            <div class="gallery__item">
+
+                <a href="pages/background_images/"><img src="pages/images/works/DSC02702.jpg" alt="media queries thumbnail" class="gallery__img"></a>
 
                 <p class="caption">Background Images</p>
 
