--- a/Final copy/index.html
+++ b/Final copy/index.html
@@ -55,23 +55,23 @@
 		<a href="#section06"><span></span>Scroll</a>
 	  </section>
 	  <section id="section06" class="demo">
-		<h1>Scroll Down Button #6</h1>
+		<h1>High Tech Low Life</h1>
 		<a href="#section07"><span></span>Scroll</a>
 	  </section>
 	  <section id="section07" class="demo">
-		<h1>Scroll Down Button #7</h1>
+		<h1>Same</h1>
 		<a href="#section08"><span></span><span></span><span></span>Scroll</a>
 	  </section>
 	  <section id="section08" class="demo">
-		<h1>Scroll Down Button #8</h1>
+		<h1>o(=•ェ•=)m</h1>
 		<a href="#section09"><span></span>Scroll</a>
 	  </section>
 	  <section id="section09" class="demo">
-		<h1>Scroll Down Button #9</h1>
+		<h1>Jungle</h1>
 		<a href="#section10"><span></span>Scroll</a>
 	  </section>
 	  <section id="section10" class="demo">
-		<h1>Scroll Down Button #10</h1>
+		<h1>Paths</h1>
 		<a href="#thanks"><span></span>Scroll</a>
 	  </section>
 	  <section id="thanks">
