--- a/Final/index.html
+++ b/Final/index.html
@@ -14,7 +14,7 @@
 
 	<div id="menu">
 	  <ul>
-		<li><a href="#home">Home</a></li>
+		<li><a href="#home">Homepage</a></li>
 		<li><a href="#about">About</a></li>
 		<li><a href="#contact">Contact</a></li>
 	  </ul>
