--- a/Final copy/index.html
+++ b/Final copy/index.html
@@ -13,7 +13,7 @@
 	<section id="section01" class="demo">
 		<h1>About me</h1>
 		<div class="container">
-		<p class="description">I start doing photograph since I bought my sony rx100 vii, I was trying to record my life at the first place until I realize photograph others on street is interesting. People or places all have their own story, I would not able to know them, but I can capture some pieces that were there.</p>
+		<p class="description">I start taking photograph since I bought my sony rx100 vii, I was trying to record my life at the first place until I realize photograph others on street is interesting. People or places all have their own story, I would not able to know them, but I can capture some pieces that were there.</p>
 		<p class="description-focus">I start doing photograph since I bought my sony rx100 vii, I was trying to record my life at the first place until I realize photograph others on street is interesting. People or places all have their own story, I would not able to know them, but I can capture some pieces that were there.</p>
 		</div>
 		<a href="#section02"><span></span>Scroll</a>
