--- a/Final copy/index.html
+++ b/Final copy/index.html
@@ -48,9 +48,9 @@
 	  <section id="section05" class="demo">
 		<div class="container">
 		<p class="description"> 
-			Human made so many things that help us to do what we think we can do. Look, I can walk to the sky through this.</p>
+			I like this color.</p>
 		<p class="description-focus">
-			Human made so many things that help us to do what we think we can do. Look, I can walk to the sky through this.</p>
+			I like this color.</p>
 		</div>
 		<a href="#section06"><span></span>Scroll</a>
 	  </section>
